# theGame

./: .gitignore  .gitmodules  CMakeLists.txt
.cache/clangd/index/: main.c.30719AEFF59C8329.idx  raylib.h.DF8EC0E3AEB8A935.idx
dev_packages/: install_packages  packages-list.txt
include/: game.h  input.h  physics.h  player.h
src/: main.c  physics.c  player.c
